# serializer version: 1
# name: test_audit_html_content_hash
  'ffe09c7db9301858f13db5260452898aa1f39332f0d4f72754e571f768dd3a2d'
# ---
# name: test_calcbook_xlsx_content_hash
  '7e1979eb8980b1d065942a92151d75bbec9cdbe87bf2dfd6374b9d9dec48cedb'
# ---
# name: test_dxf_content_hash
  '46ef6f51ab5091913642e8fc9213c21b112c2ab0cbcf923c4f83be45b96a59c9'
# ---
